--- a/index.html
+++ b/index.html
@@ -7,6 +7,7 @@
 	<meta name="description" content="Descrição do meu website">
     <meta name="author" content="Cesar Henrique Ramos">
     <link rel="stylesheet" href="css/style.css">
+    <link rel="icon" href="img/instagram.svg"/>
     <title>Instagram</title>
 </head>
 <body>
